[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProjectMaker"
version = "0.0.0a0.dev0"
authors = [
    { name = "xk2013", email = "hzk201312@163.com" },
]
description = "一个实用的项目模板制作器。"
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lita-office/ProjectMaker"
Issues = "https://github.com/lita-office/ProjectMaker/issues"
